# rdk-xr-speech-router

./: CONTRIBUTING.md  configure.ac
src/: Makefile.am  xrsr.c  xrsr.h  xrsr_config_default.json  xrsr_msgq.c  xrsr_private.h  xrsr_protocol_http.c  xrsr_protocol_http.h  xrsr_protocol_http_sm.h  xrsr_protocol_sdt.c  xrsr_protocol_sdt.h  xrsr_protocol_sdt_sm.h  xrsr_protocol_ws.c  xrsr_protocol_ws.h  xrsr_protocol_ws_sm.h  xrsr_utils.c  xrsr_utils.h  xrsr_xraudio.c
